cmake_minimum_required(VERSION 3.16)
project(DSA)

set(CMAKE_CXX_STANDARD 11)

add_executable(DSA main.cpp vector/Vector.h vector/Fib.h list/ListNode.h list/List.h binTree/BinNode.h binTree/BinTree.h graph/Graph.h graph/GraphMatrix.h stack/Stack.h queue/Queue.h binTree/BinNode_macro_BASIC.h _share/util.h _share/release.h BST/BST.h AVL/AVL.h splay/Splay.h BTree/BTNode.h BTree/BTree.h redBlack/RedBlack.h Dictionary/Dictionary.h skiplist/QuadList.h Entry/Entry.h skiplist/QNode.h skiplist/SkipList.h BitMap/BitMap.h)